objects/Address__c.object
<CustomObject>
    <description>VOLO - 
Custom address object to accommodate account to addresses relation.</description>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <formula>Account_Service__r.Service_Alias__c</formula>
        <label>Account Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account_Service__r.Alias__c</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Service__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Deprecated</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Deprecated)</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Effective_Date__c</fullName>
        <label>Address Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Use_ID__c</fullName>
        <label>Bill To Use ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_ORACLE_CSITE_ID__c</fullName>
        <label>HS ORACLE CSITE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_ORACLE_CUST_ID__c</fullName>
        <label>HS ORACLE CUST ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_ORACLE_PSITE_ID__c</fullName>
        <description>The discrepancy from Label to Name is due to changes in R12 integration. The name was kept to preserve integration functionality, the label represents the correct data element.</description>
        <label>Oracle Address Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_ORACLE_PSITE_NO__c</fullName>
        <externalId>true</externalId>
        <label>HS ORACLE PSITE #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_At__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed At</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Unit__c</fullName>
        <label>Operating Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Address_1__c</fullName>
        <label>Oracle Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Address_2__c</fullName>
        <label>Oracle Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Address_3__c</fullName>
        <label>Oracle Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Address_Concatenated__c</fullName>
        <formula>TRIM(LEFT(Oracle_Address_1__c,50) &amp; &apos; &apos; &amp; LEFT(Oracle_Address_2__c,40) &amp; &apos; &apos; &amp; LEFT(Oracle_Address_3__c,50))</formula>
        <label>Oracle Address Concatenated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Address_ID__c</fullName>
        <description>The discrepancy from Label to Name is due to changes in R12 integration. The name was kept to preserve integration functionality, the label represents the correct data element.</description>
        <externalId>true</externalId>
        <label>Oracle PSITE  ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Bill_To_Usage_Id__c</fullName>
        <label>Oracle Bill To Usage Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Cloud_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Cloud Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Country_Code__c</fullName>
        <formula>Country_LK__r.Country_Code_2__c</formula>
        <label>Oracle Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Last_Updated_Date_Time__c</fullName>
        <label>Oracle Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_PSITE_NUM__c</fullName>
        <description>Oracle PSITE Number</description>
        <formula>HS_ORACLE_PSITE_NO__c</formula>
        <inlineHelpText>Oracle PSITE Number</inlineHelpText>
        <label>Oracle PSITE NUM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_State__c</fullName>
        <formula>IF(ISBLANK( Province__c ),  TEXT( State__c ), &apos;&apos;)</formula>
        <label>Oracle State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Parent Account)</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oracle Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAccountIds1__c</fullName>
        <label>RelatedAccountIds1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Use_ID__c</fullName>
        <label>Ship To Use ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>State__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country_LK__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abruzzo</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Amadora</fullName>
                </value>
                <value>
                    <fullName>Amapà</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Aomen (zh), Macao (en)</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>Avellino</fullName>
                </value>
                <value>
                    <fullName>Avon</fullName>
                </value>
                <value>
                    <fullName>Bahia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub-Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Service__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Address_Integrated</fullName>
        <active>true</active>
        <description>Addresses integrated from Oracle</description>
        <label>Address Integrated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Only</fullName>
        <active>true</active>
        <description>Addresses maintained only in Salesforce</description>
        <label>Salesforce Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Account</fullName>
        <active>true</active>
        <description>Cannot Change Account on integrated records</description>
        <errorConditionFormula>ISCHANGED( Account_Service__c ) &amp;&amp; RecordType.Name = &quot;Address Integrated&quot; &amp;&amp; 
$User.CommunityNickname &lt;&gt; &quot;OIC SAAS&quot;</errorConditionFormula>
        <errorMessage>You cannot change the Primary Account on an Integrated Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_address_name</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name) &amp;&amp; RecordType.Name = &quot;Address Integrated&quot; &amp;&amp; 
$User.CommunityNickname &lt;&gt; &quot;System Interface&quot; &amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$User.CommunityNickname &lt;&gt; &quot;OIC SAAS&quot;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You are not authorized to change the Address Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Requires_Postal_Code</fullName>
        <active>true</active>
        <description>Country_Requires_Postal_Code</description>
        <errorConditionFormula>/* if not during lead conversion */
NOT(ISNEW()) &amp;&amp;

AND (ISBLANK(Zip_Code__c), 
OR(ISPICKVAL(Country__c, &quot;United States of America&quot;), 
ISPICKVAL(Country__c, &quot;Canada&quot;)), 
$User.CommunityNickname &lt;&gt; &quot;System Interface&quot;,
$User.CommunityNickname &lt;&gt; &quot;OIC SAAS&quot;)</errorConditionFormula>
        <errorMessage>This country requires a Zip Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USA_Must_Have_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT( Country__c) = &quot;United States of America&quot;,
TEXT(  State__c) = &quot;&quot;
)</errorConditionFormula>
        <errorMessage>Please Enter a State</errorMessage>
    </validationRules>
</CustomObject>